enable word-spacing to demonstrate text-wrap bug

--- a/src/_css/global.css
+++ b/src/_css/global.css
@@ -70,7 +70,7 @@ h1 {
   font-family: var(--font-cool);
   letter-spacing: calc(1em / 32);
   /* https://bugs.webkit.org/show_bug.cgi?id=292563 */
-  /* word-spacing: calc(1em / 16); */
+  word-spacing: calc(1em / 16);
   margin-block: 1.5rem;
 }
 
@@ -79,7 +79,7 @@ h2 {
   font-family: var(--font-cool);
   letter-spacing: calc(1em / 32);
   /* https://bugs.webkit.org/show_bug.cgi?id=292563 */
-  /* word-spacing: calc(1em / 16); */
+  word-spacing: calc(1em / 16);
   margin-block: 4rem 0.5rem;
 }
 
